trying to fix margins on smaller screens

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -51,7 +51,8 @@ header {
 footer {
   bottom: 0;
   left: 0;
-  height: 18%;
+  height: 30%;
+  width: 100%;
 }
 
 .dragon-logo {
@@ -60,70 +61,4 @@ footer {
 
 .dragon-logo, h1 {
   margin-top: 10px;
-}
-
-@media screen and (width: 320px) and (height: 568px) {
-  h1 {
-    margin-top: -3.5px;
-    margin-left: 10px;
-  }
-
-  .dragon-logo {
-    margin-top: -1.5px;
-  }
-}
-
-@media screen and (width: 375px) and (height: 667px) {
-  h1 {
-    margin-top: -3.5px;
-  }
-
-  .dragon-logo {
-    margin-top: -1.5px;
-    margin-right: 30px;
-  }
-}
-
-@media screen and (width: 414px) and (height: 896px) {
-  h1 {
-    margin-top: -3.5px;
-  }
-
-  .dragon-logo {
-    margin-top: -1.5px;
-    margin-right: 30px;
-  }
-}
-
-@media screen and (width: 390px) and (height: 844px) {
-  .dragon-logo {
-    margin-top: -1.5px;
-    margin-right: 30px;
-  }
-
-  h1 {
-    margin-top: -3.5px;
-  }
-}
-
-@media screen and (width: 393px) and (height: 851px) {
-  .dragon-logo {
-    margin-top: -1.5px;
-    margin-right: 30px;
-  }
-
-  h1 {
-    margin-top: -3.5px;
-  }
-}
-
-@media screen and (width: 360px) and (height: 740px) {
-  h1 {
-    margin-top: -3.5px;
-  }
-
-  .dragon-logo {
-    margin-top: 1.5px;
-    margin-right: 30px;
-  }
 }
